# Bachelor-Thesis-Ids-Rehorst

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_delftblue.sh  do-cmake-Debug.sh  do-cmake.sh  env-delftblue-Debug.sh  env-delftblue.sh  likwid_run_delftblue.sh  load_modules_likwid_run.sh  report.tex  run_delftblue.sh  slurm-7212064.out  start_interactive_likwid_run.sh
Notes/: literature-study.tex
cmake/: build_delftblue.bash  cpp_flags.cmake
cmake/patches/: RACE_CMakeLists_IntelLLVM.txt  functionManager.cpp  kernels.cpp  macros_patch.h  matrixPower.cpp  pin.cpp
frontmatter/: title-report.tex
include/: coloring.h  solver.h  sparsemat.h
matrices/: spinSZ12.mm
report/: report.bib  report.tex
report/Notes/: literature-study.tex
report/appendix/: appendix-a.tex  appendix-b.tex  appendix-c.tex
report/figures/: LaTeX-TikZ-Diagram:Recursive-Redundant-Bidiagonal-Solve.tex  LaTeX-TikZ-Diagram:Redundant-Computation-for-Bidiagonal-Solves.tex
report/frontmatter/: abstract.tex  title-report.tex
report/mainmatter/: chapter-2.tex  chapter-3.tex  chapter-4.tex  chapter-5.tex  conclusion.tex  introduction.tex
src/: coloring.cpp  copy.cpp  main.cpp  solver.cpp  sparsemat.cpp
tests/: DATA.txt  L2.txt  L2CACHE.txt  L3.txt  L3CACHE.txt  MEM.txt  MEM_DP.txt  MEM_HP.txt  MEM_SP.txt  TLB_DATA.txt  TMA.txt  benchmark_1.csv  benchmark_10.csv  benchmark_11.csv  benchmark_12.csv  benchmark_13.csv  benchmark_14.csv  benchmark_15.csv  benchmark_16.csv  benchmark_17.csv  benchmark_18.csv  benchmark_19.csv  benchmark_2.csv  benchmark_20.csv  benchmark_21.csv  benchmark_22.csv  benchmark_23.csv  benchmark_24.csv  benchmark_3.csv  benchmark_4.csv  benchmark_5.csv  benchmark_6.csv  benchmark_7.csv  benchmark_8.csv  benchmark_9.csv  plot_benchmarks.py  plot_rel_speedup.py  runtime_vs_nnz_thrd_mthd.py  runtime_vs_nz.py  scatter_plot.py  (+5 more)
tests/extra_runs/: benchmark_16.csv  benchmark_32.csv
tests/run_1/: benchmark_1.csv  benchmark_10.csv  benchmark_11.csv  benchmark_12.csv  benchmark_2.csv  benchmark_3.csv  benchmark_4.csv  benchmark_5.csv  benchmark_6.csv  benchmark_7.csv  benchmark_8.csv  benchmark_9.csv
tests/run_2_affinity_a2/: benchmark_1.csv  benchmark_12.csv  benchmark_2.csv  benchmark_3.csv  benchmark_6.csv  benchmark_9.csv
tests/run_3/: benchmark_1.csv  benchmark_10.csv  benchmark_11.csv  benchmark_12.csv  benchmark_2.csv  benchmark_3.csv  benchmark_4.csv  benchmark_5.csv  benchmark_6.csv  benchmark_7.csv  benchmark_8.csv  benchmark_9.csv
